# web-app-env-var

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
tests/: test_main.py
web_app_env_var/: main.py
